--- a/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
+++ b/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
@@ -1,67 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-
-     <extension
-         point="net.sourceforge.eclipsetrader.chartDataProvider">
-      <provider
-            label="Borsa Italiana"
-            class="net.sourceforge.eclipsetrader.borsaitalia.ChartDataProvider"
-            id="borsaitalia.chart"/>
-   </extension>
    <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            class="net.sourceforge.eclipsetrader.borsaitalia.GeneralPreferencePage"
-            name="Borsa Italiana"
-            id="borsaitalia.generalPreferences"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.backfillDataProvider">
-      <provider
-            label="Borsa Italiana"
-            class="net.sourceforge.eclipsetrader.borsaitalia.BackfillDataProvider"
-            id="borsaitalia.backfill"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.indexProvider">
-      <provider
-            class="net.sourceforge.eclipsetrader.borsaitalia.IndexDataProvider"
-            name="Borsa Italiana"
-            id="borsaitalia.indexProvider">
-      <index
-            ticker="SPMIB"
-            label="S/P MIB"
-            symbol="IS945"/>
-      <index
-            ticker="MIBTEL"
-            label="MIBTEL"
-            symbol="II999"/>
-      <index
-            ticker="ALL STARS"
-            label="ALL STARS"
-            symbol="II952"/>
-      <index
-            ticker="STAR"
-            label="STAR"
-            symbol="II951"/>
-      <index
-            ticker="techSTAR"
-            label="techSTAR"
-            symbol="II950"/>
-      <index
-            ticker="MIDEX"
-            label="MIDEX"
-            symbol="II932"/>
-      <index
-            ticker="MIBTEL-s"
-            label="MIBTEL-s"
-            symbol="II935"/>
-      <index
-            ticker="MIB30-s"
-            label="MIB30-s"
-            symbol="II933"/>
-      </provider>
+         point="net.sourceforge.eclipsetrader.core.feeds">
+      <feed
+            id="net.sourceforge.eclipsetrader.borsaitalia"
+            name="Borsa Italiana">
+         <history class="net.sourceforge.eclipsetrader.borsaitalia.HistoryFeed"/>
+      </feed>
    </extension>
 
 </plugin>
