--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -1,8 +1,7 @@
-source.directaworld.jar = src/
-output.directaworld.jar = bin/
-bin.includes = plugin.xml,\
-               directaworld.jar,\
-               icons/,\
-               cpl-v10.html,\
-               about.ini,\
-               META-INF/
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
+               epl-v10.html,\
+               icons/
