--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -1,10 +1,6 @@
-source.yahoo.jar = src/
-output.yahoo.jar = bin/
-bin.includes = plugin.xml,\
-               yahoo.jar,\
-               yahoo.xml,\
-               license.txt,\
-               mapping.xml,\
-               cpl-v10.html,\
-               about.ini,\
-               META-INF/
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
+               epl-v10.html
