--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -1,232 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-
-     <extension-point id="newsSource" name="News Source" schema="schema/newsSource.exsd"/>
    <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            class="net.sourceforge.eclipsetrader.yahoo.GeneralPreferencePage"
-            name="Yahoo"
-            id="yahoo"/>
-      <page
-            class="net.sourceforge.eclipsetrader.yahoo.MappingPreferencePage"
-            category="yahoo"
-            name="Mapping"
-            id="yahoo.mapping"/>
-      <page
-            class="net.sourceforge.eclipsetrader.yahoo.NewsPreferencePage"
-            category="yahoo"
-            name="News"
-            id="yahoo.news"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.dataProvider">
-      <provider
-            label="Yahoo Finance (delayed)"
-            class="net.sourceforge.eclipsetrader.yahoo.SnapshotDataProvider"
-            id="yahoo.data.provider"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.chartDataProvider">
-      <provider
-            label="Yahoo Finance"
-            class="net.sourceforge.eclipsetrader.yahoo.ChartDataProvider"
-            id="yahoo.chart.provider"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.yahoo.newsSource">
-      <source
-            label="Yahoo Deutschland"
-            class="net.sourceforge.eclipsetrader.yahoo.NewsSourceGermany"
-            id="yahoo.news.de"/>
-      <source
-            class="net.sourceforge.eclipsetrader.yahoo.NewsSourceFrance"
-            id="yahoo.news.fr"
-            label="Yahoo France"/>
-      <source
-            label="Yahoo Italia"
-            class="net.sourceforge.eclipsetrader.yahoo.NewsSourceItaly"
-            id="yahoo.news.it"/>
-      <source
-            label="Yahoo U.K."
-            class="net.sourceforge.eclipsetrader.yahoo.NewsSourceUK"
-            id="yahoo.news.uk"/>
-      <source
-            label="Yahoo U.S."
-            class="net.sourceforge.eclipsetrader.yahoo.NewsSourceUS"
-            id="yahoo.news.us"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.newsProvider">
-      <provider
-            label="Yahoo Finance"
-            class="net.sourceforge.eclipsetrader.yahoo.NewsProvider"
-            id="yahoo.newsProvider"/>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.indexProvider">
-      <provider
-            class="net.sourceforge.eclipsetrader.yahoo.IndexDataProvider"
-            name="Yahoo Finance"
-            id="yahoo.indexProvider">
-         <category name="Europe">
-            <index
-                  ticker="STOXX50E"
-                  label="DJ Euro STOXX 50"
-                  symbol="^STOXX50E"/>
-            <index
-                  ticker="BFX"
-                  label="Bruxelles BFX"
-                  symbol="^BFX"/>
-            <index
-                  ticker="GDAXI"
-                  label="Frankfurt DAX30"
-                  symbol="^GDAXI"/>
-            <index
-                  ticker="FCHI"
-                  label="Paris CAC40"
-                  symbol="^FCHI"/>
-            <index
-                  ticker="FTSE"
-                  label="London FTSE100"
-                  symbol="^FTSE"/>
-         </category>
-         <category name="Italy">
-            <index
-                  ticker="MIBTEL"
-                  label="Mibtel"
-                  symbol="^MIBTEL"/>
-            <index
-                  ticker="MIB30"
-                  label="Mib30"
-                  symbol="^MIB30"/>
-            <index
-                  ticker="MIDEX"
-                  label="Midex"
-                  symbol="^MIDEX"/>
-            <index
-                  ticker="TSTAR"
-                  label="TechStar"
-                  symbol="I950.MI"/>
-            <index
-                  ticker="STAR"
-                  label="Star"
-                  symbol="^STAR"/>
-            <index
-                  ticker="SPMIB"
-                  label="S/P Mib"
-                  symbol="^SPMIB"/>
-            <index
-                  ticker="ALLST"
-                  label="All Star"
-                  symbol="^ALLST"/>
-            <index
-                  ticker="MIBTEL-S"
-                  label="Mibtel-S"
-                  symbol="^MIBTELS"/>
-            <index
-                  ticker="MIB30-S"
-                  label="Mib30-S"
-                  symbol="^MIB30S"/>
-         </category>
-         <category name="Norway">
-            <index
-                  ticker="OSEBX"
-                  label="Oslo OSEBX"
-                  symbol="^OSEBX"/>
-            <index
-                  ticker="OSEAX"
-                  label="Oslo All Share OSEAX"
-                  symbol="^OSEAX"/>
-            <index
-                  ticker="OBX"
-                  label="Oslo OBX Index"
-                  symbol="^OBX"/>
-            <index
-                  ticker="OSEFX"
-                  label="Oslo Fund Index"
-                  symbol="^OSEFX"/>
-            <index
-                  ticker="OSESX"
-                  label="Oslo SMA Index"
-                  symbol="^OSESX"/>
-         </category>
-         <category name="United States">
-            <index
-                  ticker="DJI"
-                  label="DJ Ind."
-                  symbol="^DJI"/>
-            <index
-                  ticker="DJT"
-                  label="DJ Trans."
-                  symbol="^DJT"/>
-            <index
-                  ticker="DJU"
-                  label="DJ Util."
-                  symbol="^DJU"/>
-            <index
-                  ticker="DJA"
-                  label="DJ Comp."
-                  symbol="^DJA"/>
-            <index
-                  ticker="IXIC"
-                  label="Nasdaq Comp."
-                  symbol="^IXIC"/>
-            <index
-                  ticker="NDX"
-                  label="Nasdaq 100"
-                  symbol="^NDX"/>
-            <index
-                  ticker="IXFN"
-                  label="Nasdaq Fin."
-                  symbol="^IXFN"/>
-            <index
-                  ticker="IXF"
-                  label="Nasdaq Fin.100"
-                  symbol="^IXF"/>
-            <index
-                  ticker="IXID"
-                  label="Nasdaq Ind."
-                  symbol="^IXID"/>
-            <index
-                  ticker="IXIS"
-                  label="Nasdaq Ins."
-                  symbol="^IXIS"/>
-            <index
-                  ticker="IXK"
-                  label="Nasdaq Computers"
-                  symbol="^IXK"/>
-            <index
-                  ticker="IXTR"
-                  label="Nasdaq Trans."
-                  symbol="^IXTR"/>
-            <index
-                  ticker="IXUT"
-                  label="Nasdaq Tel."
-                  symbol="^IXUT"/>
-            <index
-                  ticker="OEX"
-                  label="S/P 100"
-                  symbol="^OEX"/>
-            <index
-                  ticker="GSPC"
-                  label="S/P 500"
-                  symbol="^GSPC"/>
-            <index
-                  ticker="MID"
-                  label="S/P MidCap"
-                  symbol="^MID"/>
-            <index
-                  ticker="SML"
-                  label="S/P SmallCap"
-                  symbol="^SML"/>
-            <index
-                  ticker="SPSUPX"
-                  label="S/P SuperComp"
-                  symbol="^SPSUPX"/>
-         </category>
-      </provider>
+         point="net.sourceforge.eclipsetrader.core.feeds">
+      <feed
+            id="net.sourceforge.eclipsetrader.yahoo"
+            name="Yahoo! Finance">
+         <history class="net.sourceforge.eclipsetrader.yahoo.HistoryFeed"/>
+         <quote class="net.sourceforge.eclipsetrader.yahoo.Feed"/>
+      </feed>
    </extension>
 
 </plugin>
