--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -32,5 +32,44 @@
          </run>
       </application>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="net.sourceforge.eclipsetrader"
+            class="org.eclipse.ui.ExtensionFactory:colorsAndFontsPreferencePage"
+            id="org.eclipse.ui.preferencePages.ColorsAndFonts"
+            name="Colors and Fonts"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.actionSets">
+      <actionSet
+            id="org.eclipse.update.ui.softwareUpdates"
+            label="Software Updates"
+            visible="true">
+         <menu
+               id="org.eclipse.update.ui.updateMenu"
+               label="Software Updates"
+               path="help/group.updates">
+            <separator name="group0"/>
+            <separator name="group1"/>
+         </menu>
+         <action
+               class="net.sourceforge.eclipsetrader.internal.InstallWizardAction"
+               disabledIcon="icons/full/dlcl16/usearch_obj.gif"
+               icon="icons/full/elcl16/usearch_obj.gif"
+               id="org.eclipse.update.ui.newUpdates"
+               label="Find and Install..."
+               menubarPath="help/org.eclipse.update.ui.updateMenu/group0"
+               style="push"/>
+         <action
+               class="net.sourceforge.eclipsetrader.internal.ConfigurationManagerAction"
+               disabledIcon="icons/full/dlcl16/configs.gif"
+               icon="icons/full/elcl16/configs.gif"
+               id="org.eclipse.update.ui.configManager"
+               label="Manage Configuration..."
+               menubarPath="help/org.eclipse.update.ui.updateMenu/group0"
+               style="push"/>
+      </actionSet>
+   </extension>
 
 </plugin>
