--- a/net.sourceforge.eclipsetrader.island/build.properties
+++ b/net.sourceforge.eclipsetrader.island/build.properties
@@ -1,6 +1,6 @@
-source.island.jar = src/
-output.island.jar = bin/
-bin.includes = plugin.xml,\
-               island.jar,\
-               about.ini,\
-               META-INF/
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               plugin.xml,\
+               epl-v10.html
