--- a/net.sourceforge.eclipsetrader.island/plugin.xml
+++ b/net.sourceforge.eclipsetrader.island/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-
-     <extension
-         point="net.sourceforge.eclipsetrader.bookDataProvider">
-      <provider
-            label="Island Level II Streaming"
-            class="net.sourceforge.eclipsetrader.island.BookDataProvider"
-            id="island.bookDataProvider"/>
+   <extension
+         point="net.sourceforge.eclipsetrader.core.feeds">
+      <feed
+            id="net.sourceforge.eclipsetrader.island"
+            name="Island">
+         <level2 class="net.sourceforge.eclipsetrader.island.Level2Feed"/>
+      </feed>
    </extension>
 
 </plugin>
