Added preference pages
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@453 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -39,6 +39,11 @@
             class="org.eclipse.ui.ExtensionFactory:colorsAndFontsPreferencePage"
             id="org.eclipse.ui.preferencePages.ColorsAndFonts"
             name="Colors and Fonts"/>
+      <page
+            category="net.sourceforge.eclipsetrader"
+            class="net.sourceforge.eclipsetrader.preferences.StartupShutdownPreferencesPage"
+            id="net.sourceforge.eclipsetrader.startupAndShutdown"
+            name="Startup and Shutdown"/>
    </extension>
    <extension
          point="org.eclipse.ui.actionSets">
