--- a/net.sourceforge.eclipsetrader-feature/feature.properties
+++ b/net.sourceforge.eclipsetrader-feature/feature.properties
@@ -24,7 +24,7 @@ providerName=Sourceforge.net
 updateSiteName=EclipseTrader Update Site
 
 # "description" property - description of the feature
-description=EclipseTrader Core Plugins
+description=Stock exchange financial analysis and trading system
 
 # copyright
 copyright=\
