Added security wizard for US stocks
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@459 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -2,6 +2,21 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension
+         point="org.eclipse.ui.actionSets">
+      <actionSet
+            id="net.sourceforge.eclipsetrader.yahoo"
+            label="Yahoo"
+            visible="true">
+         <action
+               class="net.sourceforge.eclipsetrader.yahoo.actions.NewSecurityAction"
+               icon="icons/us.gif"
+               id="net.sourceforge.eclipsetrader.yahoo.newSecurity"
+               label="U.S. Stock Security"
+               menubarPath="file/newWizard/plugins"
+               style="push"/>
+      </actionSet>
+   </extension>
+   <extension
          point="org.eclipse.ui.preferencePages">
       <page
             category="net.sourceforge.eclipsetrader.plugins"
