--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                epl-v10.html,\
-               icons/
+               icons/,\
+               data/
