Added Italian news provider
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@467 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -4,4 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                epl-v10.html,\
-               categories.xml
+               categories.xml,\
+               data/,\
+               icons/,\
+               lib/
