Added security wizard for German stocks
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@468 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -14,6 +14,13 @@
                label="U.S. Stock Security"
                menubarPath="file/newWizard/plugins"
                style="push"/>
+         <action
+               class="net.sourceforge.eclipsetrader.yahoo.actions.NewGermanSecurityAction"
+               icon="icons/de.gif"
+               id="net.sourceforge.eclipsetrader.yahoo.newGermanSecurity"
+               label="German Stock Security"
+               menubarPath="file/newWizard/plugins"
+               style="push"/>
       </actionSet>
    </extension>
    <extension
