Added Market Thermometer indicator
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@479 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -392,6 +392,15 @@
                title="Line"/>
       </indicator>
       <indicator
+            class="net.sourceforge.eclipsetrader.charts.indicators.MarketThermometer"
+            id="net.sourceforge.eclipsetrader.indicators.therm"
+            name="Market Thermometer - THERM">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.indicators.MarketThermometerPreferences"
+               description="Set the market thermometer parameters"
+               title="Market Thermometer"/>
+      </indicator>
+      <indicator
             class="net.sourceforge.eclipsetrader.charts.indicators.MA"
             id="net.sourceforge.eclipsetrader.indicators.ma"
             name="Moving Average - MA">
