Added French securities wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@488 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -21,6 +21,13 @@
                label="German Stock Security"
                menubarPath="file/newWizard/plugins"
                style="push"/>
+         <action
+               class="net.sourceforge.eclipsetrader.yahoo.actions.NewFrenchSecurityAction"
+               icon="icons/fr.gif"
+               id="net.sourceforge.eclipsetrader.yahoo.newFranceSecurity"
+               label="French Stock Security"
+               menubarPath="file/newWizard/plugins"
+               style="push"/>
       </actionSet>
    </extension>
    <extension
