Changed perspective layout for compatibility with Eclipse SDK 3.2
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@494 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -7,7 +7,8 @@
          point="org.eclipse.ui.actionSets">
       <actionSet
             id="net.sourceforge.eclipsetrader.securities"
-            label="Securities">
+            label="Securities"
+            visible="true">
          <action
                class="net.sourceforge.eclipsetrader.core.ui.actions.NewSecurityAction"
                icon="icons/etool16/database_add.png"
