Changed perspective layout for compatibility with Eclipse SDK 3.2
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@496 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.news/plugin.xml
+++ b/net.sourceforge.eclipsetrader.news/plugin.xml
@@ -61,7 +61,7 @@
          <view
                id="net.sourceforge.eclipsetrader.webbrowser:net.sourceforge.eclipsetrader.news"
                relationship="stack"
-               relative="org.eclipse.ui.editorss"
+               relative="center"
                />
          <viewShortcut id="net.sourceforge.eclipsetrader.securities"/>
          <viewShortcut id="net.sourceforge.eclipsetrader.newslist"/>
@@ -80,7 +80,7 @@
          <view
                id="net.sourceforge.eclipsetrader.webbrowser:net.sourceforge.eclipsetrader.news"
                relationship="stack"
-               relative="org.eclipse.ui.editorss"
+               relative="center"
                visible="false"/>
       </perspectiveExtension>
    </extension>
